# examples

./: README.md
fastapi-example/: Dockerfile  compose.yaml  pyproject.toml
fastapi-example/alembic/: env.py
fastapi-example/alembic/versions/: 316e95bd55ef_initial_migration.py  e0ffe8784a64_add_blog_post.py
fastapi-example/scripts/: run_migrations.sh
fastapi-example/src/: database.py  main.py  settings.py
fastapi-example/src/models/: __init__.py  blog_post.py  user.py
fastapi-example/src/services/: user_service.py
